<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Employee Tracker</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome">Welcome :) </string>
    <string name="title_activity_employee_home">Employee Home Page</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="pingFail_msg">Please check your Internet connection</string>
    <string name="serverFail_msg">Server Not Found, Please try again</string>
    <string name="loginError_msg">Please enter all required fields Mobile Number and Password </string>
    <string name="wrongLoginError_msg">Please enter valid credentials</string>
    <string name="wrongRegisterError_msg">Not Registered .. Please try again</string>
    <string name="wrongPasswordError_msg">Wrong Password .. Please enter your old password</string>
    <string name="uploadError_msg">Could not retrieve data from the server, check your connection</string>
    <string name="email_msg">Mobile Number already registered before</string>
    <string name="help">Help</string>
    <string name="help_msg">Coming Soon :)</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="error">Error</string>
    <string name="ok">Ok</string>
    <string name="tryAgain">Try Again</string>
    <string name="loading">Loading ...</string>
    <string name="please_wait">Please Wait</string>
    <string name="please_wait_while">Please wait while connecting to the server...</string>
    <string name="contactUs">Contact Us</string>
    <string name="version">Version</string>
    <string name="companyName"></string>
    <string name="copyrights">Copy Rights</string>
    <string name="mail"></string>
    <string name="login_mobile">Mobile Number</string>
    <string name="imei">IMEI</string>
    <string name="employer">Employer</string>
    <string name="confirmed">Confirmed?</string>
    <string name="forgot_password">Forget Password</string>
    <string name="register">Register</string>
    <string name="login_button_text">Login</string>
    <string name="resgister_button_text">New User ?</string>
    <string name="reset_button_text">Reset</string>
    <string name="login_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="Last_name">Last Name</string>
    <string name="email">Email Address</string>
    <string name="employer_prompt">Employer Name</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_forget_password">Forget P assword</string>
    <string name="mobile_error">Please enter your mobile number</string>
    <string name="first_name_error">Please enter your first name</string>
    <string name="last_name_error">Please enter your last name</string>
    <string name="password_error">Please enter your password</string>
    <string name="confirm_password_error">Please enter confirm password</string>
    <string name="employer_error">Please choose your employer</string>
    <string name="password_mismatch_error">Password mismatch</string>
    <string name="title_activity_check_in_out">CheckInOutActivity</string>
    <string name="blank_txt">This Field can not be blank</string>
    <string name="notconfirmed">This user is not confirmed yet .. please contact your employer</string>
    <string name="wrong_mobile">Wrong Mobile Number</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="unique_mobile">Mobile Number should be unique</string>
    <string name="not_registered">Not Registered Yet .. Please try again</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>

</resources>