<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D05860"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

    <TextView
        android:id="@+id/first_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="#fff"
        android:text="@string/first_name" />

    <TextView
        android:id="@+id/first_name_txt"
        android:layout_width="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/first_name" />

    <TextView
        android:id="@+id/last_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_name"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:textColor="#fff"
        android:text="@string/Last_name" />

    
     <TextView
        android:id="@+id/last_name_txt"
        android:layout_width="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_name_txt"
        android:layout_toRightOf="@+id/last_name" />
     
     
      <TextView
        android:id="@+id/mobile"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/last_name"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:textColor="#fff"
        android:text="@string/login_mobile" />
      
      
     <TextView
        android:id="@+id/mobile_txt"
        android:layout_width="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/last_name_txt"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/mobile" />
     
     
     
      <TextView
        android:id="@+id/imei"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mobile"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:textColor="#fff"
        android:text="@string/imei" />
     
      
      <TextView
        android:id="@+id/imei_txt"
        android:layout_width="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/mobile_txt"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imei" 
        />
      
       <TextView
        android:id="@+id/employer"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imei"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:textColor="#fff"
        android:text="@string/employer" />
      
       <TextView
        android:id="@+id/employer_txt"
        android:layout_width="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/imei_txt"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/employer" 
        />
       
       
       <TextView
        android:id="@+id/confirmed"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/employer"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:textColor="#fff"
        android:text="@string/confirmed" />
       
       
       <TextView
        android:id="@+id/confirmed_txt"
        android:layout_width="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/employer_txt"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/confirmed" 
        />
       
</RelativeLayout>