<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#D05860"
    android:isScrollContainer="false"
    android:orientation="vertical" >

    <!-- android:background="@drawable/background" -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dip" >

        <EditText
            android:id="@+id/mobile_txt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:layout_marginTop="150dip"
            android:ellipsize="end"
            android:gravity="center"
            android:hint="@string/login_mobile"
            android:imeActionLabel="Next"
            android:inputType="number"
            android:singleLine="true" >
        </EditText>

        <EditText
            android:id="@+id/password_txt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:ellipsize="end"
            android:gravity="center"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:singleLine="true" >
        </EditText>

        <Button
            android:id="@+id/login"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dip"
            android:background="#fff"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/login_button_text"
            android:textColor="#D05860" />
        
        <Button
            android:id="@+id/register"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginBottom="30dip"
            android:background="#fff"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/resgister_button_text"
            android:textColor="#D05860" />
<!-- 
        <TextView
            android:id="@+id/register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="#fff"
            android:textSize="16dip" />
 -->
        <!-- <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="#fff"
            android:textSize="16dip" /> -->
    </LinearLayout>

</ScrollView>